--- a/Sprint 1/filmFinder/templates/account.html
+++ b/Sprint 1/filmFinder/templates/account.html
@@ -1,4 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>{{ current_user.username }}</h1>
+<h5>User id:<h5>
+	<p>{{ current_user.id }}</p>
+<h5>User profile image:<h5>
+	<p><img src="../static/images/{{current_user.profile_image}}" height="200" width="200"></p>	
+<h5>User name:</h5>
+	<p>{{ current_user.username }}</p>
+<h5>User email:</h5>
+<p>{{ current_user.email }}</p>	
+<h5>Wishlist:</h5>
+<p><a href="#">My wishlist</a></p>	
+<h5>Blacklist:</h5>
+<p><a href="#">Blacklist</a></p>	
 {% endblock content %}
