--- a/Sprint 1/filmFinder/templates/layout.html
+++ b/Sprint 1/filmFinder/templates/layout.html
@@ -3,13 +3,21 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-  
-    
+    <link rel="shortcut icon" href="../static/favicon.ico"/>
+    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"> -->
+    <!-- Customized CSS -->
+    <link rel="stylesheet" href="../static/movie.css">
+		<link rel="stylesheet" href="../static/top-bar.css">
+		<link rel="stylesheet" href="../static/container.css">
+		<link rel="stylesheet" href="../static/bottom-bar.css">
+    <link rel="stylesheet" href="../static/common.css">
+    <link rel="stylesheet" href="../static/detail.css">
+    <link rel="stylesheet" href="../static/results.css">
+
 
 	{% if title %}
 		<title>FilmFinder - {{ title }}</title>
@@ -17,46 +25,45 @@
 		<title>FilmFinder</title>
 	{% endif %}
 </head>
-<body>
-	<header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-inverse navbar-dark bg-steel fixed-top >
-        <div class="container">
-          <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Film Finder</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-              <li><a class="nav-item nav-link" href="/">Home</a></li>
-              <li><a class="nav-link disabled">|</a></li>
-              <li><a class="nav-item nav-link" href="{{ url_for('about') }}">About</a></li>
-              <li><a class="nav-link disabled">|</a></li>
-              <li><a class="nav-item nav-link" href="{{ url_for('advanced_search') }}">Search</a></li>
-            </div>
-            <div class="navbar-nav mr-auto">
-              <form class="form-inline" action = "/search_temp" method = 'POST'>
-                <input name ='search' class="form-control mr-sm-2" type="search" placeholder="film/director/actor" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-            <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-              {% if current_user.is_authenticated %}
-              	<li><a class="nav-item nav-link" href="{{ url_for('account') }}">ACCOUNT</a></li>
-              	<li><a class="nav-item nav-link" href="{{ url_for('logout') }}">SIGN OUT</a></li>
-              {% else %}
-              <li><a class="nav-item nav-link" href="{{ url_for('login') }}">SIGN IN</a></li>
-              <li><a class="nav-item nav-link" href="{{ url_for('register') }}">CREATE ACCOUNT</a></li>
-              {% endif %}
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
 
-    <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
+<body>
+  <div class="container">
+    <!-- top-bar -->
+    <div class="social">
+      {% if current_user.is_authenticated %}
+      <div class="social-content"><a href="{{ url_for('account') }}">{{ current_user.username }}</a></div>
+      
+      <div class="social-content"><a class="disabled">|</a></div>
+      <div class="social-content"><a href="{{ url_for('logout') }}">SIGN OUT</a></div>
+    
+    
+      {%else%}
+      <div class="social-content"><a href="{{ url_for('login') }}">LOGIN</a></div>
+      <div class="social-content"><a href="{{ url_for('register') }}">CREATE ACCOUNT</a></div>
+      {%endif%}
+    </div>
+<!-- meau -->
+    <div class="span"></div>
+    <div class="menu">
+      <div class="menu-start">
+        <a href="{{ url_for('home') }}">
+          <div class="menu-start-img"></div>
+        </a>
+      </div>
+      <div class="menu-center">
+        <form action="/search_temp" method = 'POST'>
+          <input class="search-input"  type="search" name ='search' placeholder="film/director/actor" aria-label="Search"/>
+          <button type="submit" class="search-button">Search</button>          
+        </form>	
+
+      </div>
+      <div class="menu-end">
+        <div class="menu-end-content"><a href="/">Home</a></div>
+        <div class="menu-end-content"><a href="{{ url_for('about') }}">About</a></div>
+        <div class="menu-end-content"><a href="{{ url_for('advanced_search') }}">Search</a></div>
+      </div>
+    </div>
+    <div>
 		  {% with messages = get_flashed_messages(with_categories=true) %}
 		  	{% if messages %}
 			  	{% for category, message in messages %}
@@ -65,32 +72,41 @@
 		  	{% endif %}
 		  {% endwith%} 
           {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>Popular this Week</h3>
-              <ol class="list-group">
-                <li class="list-group-item list-group-item-light">movie 1</li>
-                <li class="list-group-item list-group-item-light">movie 2</li>
-                <li class="list-group-item list-group-item-light">movie 3</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ol>
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <footer class="footer fixed-bottom">
-      <div style="color:#fafafa">
-        COMP9900 20T3 HDpp
-      </div>
-  </footer>
+    </div>  
+    <div class="bottom-bar">
+		    	<div class="bottom-col-1">
+		    		<div class="bottom-img">
+		    			<div class="bottom-img-content"></div>
+		    			<div class="bottom-img-word">
+		    				<div>Anzac Parade, Kingsford NSW 2032</div>
+		    				<div>Group name: HDpp</div>
+		    			</div>
+		    		</div>
+		    		<div class="bottom-link">
+		    			<div class="link-title">Quick Links</div>
+		    			<div class="link-word"><a href="">Home</a></div>
+		    			<div class="link-word"><a href="">Movie</a></div>
+		    			<div class="link-word"><a href="">Search</a></div>
+		    		</div>
+		    		<div class="bottom-link">
+		    			<div class="link-title">Account</div>
+		    			<div class="link-word"><a href="">My account</a></div>
+		    			<div class="link-word"><a href="">My wishlist</a></div>
+		    			<div class="link-word"><a href="">My blocklist</a></div>
+		    		</div>
+		    	</div>
+		    	<div class="bottom-col-2">
+		    		UNSW 2020T3 COMP9900 HDpp
+		    	</div>
+    </div>    
+  </div>
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  
-    <script src="../static/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="../static/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="../static/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="../static/jquery-3.2.1.min.js"></script>
+    <script src="../static/jquery-3.2.1.slim.min.js"></script>
+    <script src="../static/popper.min.js"></script>
+    <script src="../static/bootstrap.min.js"></script>
 </body>
 </html>
