--- a/Sprint 1/filmFinder/templates/search_temp.html
+++ b/Sprint 1/filmFinder/templates/search_temp.html
@@ -1,36 +1,65 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1 class = 'center'>General Search Page</h1>
-    <br>
-    <h5 class = 'center'>----------------------General Search----------------------</h5>
-    <form action="" method="POST">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="inputGroup-sizing-default">General Search</span>
-            </div>
-            <input type="text" name = 'search' class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-          </div>
-          <div style="text-align:center; vertical-align:middel;">
-            <input style="width:120px;" class="btn btn-outline-success" type="submit" value="search" />
+    <h1 class = 'center'>Search Results:</h1>
+    <form method="POST">
+      <!-- <div align="center"></div> -->
+      <h5 class ='center'>----------------------Search Results----------------------</h5>
+      {{condition_results}}<br><br>
+      {% for result in search_results %}
+      <div class="so-result-info search-movie clearfix">
+        <div class="result_ugc result-content">
+        
+        <div class="tele_box">
+        <div class="vari_pho">
+        <a class="vari_p report-click report-action" href="#" target="_blank">
+        <img src="../static/poster_downloads/{{result.poster_path}}.jpg">
+        </a>
         </div>
-   </form> 
-
-   <div class = 'border-bottom'>
-       <br>
-   </div>
-
-   <br>
-
-
-   <form method="GET" class ='center'>
-    <!-- <div align="center"></div> -->
-    <h5 class = 'center'>----------------------Search Results----------------------</h5>
-    {{condition_results}}<br><br>
-    {% for result in search_results %}
-    {{result}}
-    <br>
-    {% endfor %}
-    </form>     
-    <br>
-    <br> 
+        <div class="tele_intro">
+        <div class="tele_hd">
+        
+        <a href="#" target="_blank" class="report-click report-action"><b>{{result.title}}</b></a>
+        <a class="year">{{result.release_date}}</a>
+        
+        
+        </div>
+        <div class="tele_line">
+        <div class="info_item">
+        <span class="label">Casts:</span>
+        <span class="cont">
+        <a href="#" target="_blank">xxx</a> <a href="#" target="_blank">yyy</a> <a href="#" target="_blank">zzz</a> <a href="#" target="_blank">ttt</a> 
+        </div>
+        <div class="info_item">
+        <span class="label">Director:</span>
+        <span class="cont">
+        <a href="#" target="_blank">{{result.crew}}</a></span>
+        </div>
+        </div>
+        <div class="tele_line">
+        <div class="info_item">
+        <span class="label">Genre:</span>
+        <span class="cont">
+        {{result.genres}}</span>
+        </div>
+        <div class="info_item">
+        <span class="label">Country:</span>
+        <span class="cont">
+        {{result.production_countries}}</span>
+        </div>
+        </div>
+        <div class="tele_item_des">
+        <span class="label">Details:</span>
+        <span class="desc_text">
+          {{result.overview}}
+            <a class="desc_detail report-click report-action" style="float:right" target="_blank" href="film/{{result.id}}">details:
+        </a>
+        </span>
+        <a style="margin-top:45px;" class="so-result-btn center play report-click report-action" target="_blank" href="film/{{result.id}}"><span><em></em>More details</span></a>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+      {% endfor %}
+      </form> 
 {% endblock content %}
