--- a/Sprint 1/filmFinder/templates/advanced.html
+++ b/Sprint 1/filmFinder/templates/advanced.html
@@ -218,14 +218,14 @@
         
         <div class="tele_box">
         <div class="vari_pho">
-        <a class="vari_p report-click report-action" href="#" target="_blank">
+        <a class="vari_p report-click report-action" href="film/{{result.id}}" target="_blank">
         <img src="../static/poster_downloads/{{result.poster_path}}.jpg">
         </a>
         </div>
         <div class="tele_intro">
         <div class="tele_hd">
         
-        <a href="#" target="_blank" class="report-click report-action"><b>{{result.title}}</b></a>
+        <a href="film/{{result.id}}" target="_blank" class="report-click report-action"><b>{{result.title}}</b></a>
         <a class="year">{{result.release_date}}</a>
         
         
