--- a/Sprint 1/filmFinder/templates/home.html
+++ b/Sprint 1/filmFinder/templates/home.html
@@ -27,7 +27,7 @@
 								{%endfor%}
 							</div>
 						</div>
-						<div class="moive-recom">
+						<div class="movie-recom">
 							<div>
 								<a href="film/{{movies.1.id}}">
 									<div class="movie-img">
