--- a/Sprint 1/filmFinder/static/common.css
+++ b/Sprint 1/filmFinder/static/common.css
@@ -139,6 +139,16 @@ body {
   .bt span.on{ 
 	background:#F00;
   }
+
+  
+  hr {
+	border: 0;
+	clear:both;
+	display:block;
+	width: 96%;               
+	background-color:#2d3236;
+	height: 1px;
+  }
   
   
   
