--- a/Sprint 1/filmFinder/templates/account.html
+++ b/Sprint 1/filmFinder/templates/account.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class = "bootstrapiso">
     <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
           <h2 class="account-heading">{{ current_user.username }}</h2>
           <p class="text-secondary">{{ current_user.email }}</p>
+          <a class="btn btn-primary" href="#" role="button">My wishlist</a>
+          <a class="btn btn-primary" href="#" role="button">My blacklist</a>
         </div>
       </div>
         <form method="POST" action="" enctype="multipart/form-data">
@@ -54,4 +57,5 @@
             </div>
         </form>
     </div>
+</div>
 {% endblock content %}
