--- a/Sprint 1/filmFinder/templates/advanced.html
+++ b/Sprint 1/filmFinder/templates/advanced.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class = "bootstrapiso">
-  <h1 class = 'center'>Search Results:</h1>
   <form action="" method="POST">
         <h5 class = 'center'>----------------------Advanced Search----------------------</h5>
         <div class="input-group mb-3">
@@ -212,6 +211,11 @@
       <!-- <div align="center"></div> -->
       <h5 class ='center'>----------------------Search Results----------------------</h5>
       {{condition_results}}<br><br>
+      <div style="border: 2px solid rgb(5, 5, 5);
+      border-radius: 30px;
+      padding:25px 10px;
+      background-color:rgba(240, 255, 255, 0.5);
+      " >
       {% for result in search_results %}
       <div class="so-result-info search-movie clearfix">
         <div class="result_ugc result-content">
@@ -268,6 +272,7 @@
         </div>
         </div>
       {% endfor %}
+    </div>
       </form> 
     </div>
 {% endblock content %}
