--- a/Sprint 1/filmFinder/templates/layout.html
+++ b/Sprint 1/filmFinder/templates/layout.html
@@ -39,6 +39,7 @@
     
       {%else%}
       <div class="social-content"><a href="{{ url_for('login') }}">LOGIN</a></div>
+      <div class="social-content"><a class="disabled">|</a></div>
       <div class="social-content"><a href="{{ url_for('register') }}">CREATE ACCOUNT</a></div>
       {%endif%}
     </div>
@@ -53,13 +54,16 @@
       <div class="menu-center">
         <form action="/search_temp" method = 'POST'>
           <input class="search-input"  type="search" name ='search' placeholder="film/director/actor" aria-label="Search"/>
-          <button type="submit" class="search-button">Search</button>          
+          <button type="submit" class="search-button">Search</button>    
+  
         </form>	
 
       </div>
       <div class="menu-end">
         <div class="menu-end-content"><a href="/">Home</a></div>
+        <div class="social-content"><a class="disabled">|</a></div>
         <div class="menu-end-content"><a href="{{ url_for('about') }}">About</a></div>
+        <div class="social-content"><a class="disabled">|</a></div>
         <div class="menu-end-content"><a href="{{ url_for('advanced_search') }}">Search</a></div>
       </div>
     </div>
