--- a/Sprint 1/filmFinder/templates/film.html
+++ b/Sprint 1/filmFinder/templates/film.html
@@ -12,10 +12,10 @@
 								<div class="rating-value">{{movie_details.vote_average}}</div>
 							</div>
 							<div class="wishlist">
-								<form action="#" method="get">
+								<form action="#" method="POST">
 									<input type="submit" value="Add to wishlist" />
 								</form>
-
+									{{response}}
 							</div>
 						</div>
 					</div>
